[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMUST"
version = "0.1.0"
authors = [
  {name="Damien Garcia", email="damien.garcia@creatis.insa-lyon.fr"},
   {name = "Gabriel Bernardino", email = "gabriel.bernardino@upf.edu"},
]
description = "Python port of the MUST toolbox for ultrasound signal processing and generation of simulated images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["license", "dependencies"]



[project.urls]
Homepage = "https://www.biomecardio.com/MUST"
Repository = "https://github.com/creatis-ULTIM/PyMUST"
Issues = "https://github.com/creatis-ULTIM/PyMUST/issues"

